# useful-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
init_project/: README.md  constants.py  main.py  pyproject.toml  template_paths.py
init_project/examples/python_example/: .pre-commit-config.yaml  pyproject.toml  pyrightconfig.json
init_project/examples/python_example/.github/workflows/: ci.yml
init_project/examples/python_example/src/test/: test_main.py
init_project/templates/: ci.yaml  pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  test_main.py
init_project/templates/ignore/: cursorignore.tpl  geminiignore.tpl
md_docs_parser/: README.md  llm_docs_usage_prompt.md  main.py  pyproject.toml
md_docs_parser/examples/: firecms_docs_2025_12_26.md  pydantic_ai_docs_2025_12_07.md
md_docs_parser/examples/firecms_docs_2025_12_26/: index.md
md_docs_parser/examples/firecms_docs_2025_12_26/firecms_documentation/: accessing_the_rest_of_the_entity_form_context.md  action_button.md  adapter_for_custom_data_types.md  add_a_slug_to_your_documents.md  adding_the_collection_editor_views.md  adding_the_user_management_views.md  additional_columns_fields.md  additional_notes.md  advanced_configuration.md  advanced_example_composite_slug_editor.md  alert.md  app_check.md  app_config.md  array.md  authcontroller.md  authenticating_users.md  authentication_and_user_management.md  authentication_and_user_management_in_self-hosted_firecms.md  authenticator.md  (+310 more)
md_docs_parser/examples/pydantic_ai_docs_2025_12_07/: index.md
(+1236 files in other folders)
